--- a/web_src/package.json
+++ b/web_src/package.json
@@ -20,11 +20,14 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-multi-dest": "0.0.4",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-webpack": "^1.5.0",
+    "merge2": "^1.0.3",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
   }
