--- a/web_src/package.json
+++ b/web_src/package.json
@@ -27,7 +27,9 @@
     "gulp-uglify": "^2.1.2",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-webpack": "^1.5.0",
+    "material-ui": "^0.17.4",
     "merge2": "^1.0.3",
+    "react-tap-event-plugin": "^2.0.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
   }
