--- a/web_src/package.json
+++ b/web_src/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/webpack-dev-server --hot --host 0.0.0.0"
+    "start": "webpack-dev-server --inline"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
@@ -30,11 +31,15 @@
     "gulp-uglifycss": "^1.0.8",
     "gulp-uglifyjs": "^0.6.2",
     "gulp-webpack": "^1.5.0",
+    "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "material-ui": "^0.17.4",
     "merge2": "^1.0.3",
     "muicss": "^0.9.16",
+    "react-hot-loader": "^1.3.1",
     "react-tap-event-plugin": "^2.0.1",
+    "style-loader": "^0.17.0",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
   }
