--- a/web_src/package.json
+++ b/web_src/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --inline"
+    "start": "webpack-dev-server --config webpack.dev.config.js --inline"
   },
   "author": "",
   "license": "ISC",
@@ -20,10 +20,12 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.1",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
+    "gulp-environments": "^0.1.2",
     "gulp-less": "^3.3.0",
     "gulp-multi-dest": "0.0.4",
     "gulp-rename": "^1.2.2",
