--- a/web_src/package.json
+++ b/web_src/package.json
@@ -14,6 +14,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
   },
