--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@
 #spring.thymeleaf.cache=false
 #spring.freemarker.cache=false
 #spring.groovy.template.cache=false
+
+#server.error.whitelabel.enabled=false
