--- a/web_src/package.json
+++ b/web_src/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "set NODE_ENV=production&&webpack -p --config webpack.prod.config.js",
-    "start": "webpack-dev-server --config webpack.dev.config.js --inline"
+    "build:server": "babel ./src/server --out-dir build/",
+    "start:prod": "set NODE_ENV=production&&node ./build/server.js",
+    "start:dev": "webpack-dev-server --config webpack.dev.config.js --inline",
+    "start": "set NODE_ENV=development&&node ./build/server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.15.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.7",
@@ -20,8 +24,10 @@
     "webpack-dev-server": "^2.4.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
