--- a/web_src/package.json
+++ b/web_src/package.json
@@ -6,33 +6,38 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "set NODE_ENV=production&&webpack -p --config webpack.prod.config.js",
-    "build:server": "babel ./src/server --out-dir build/",
+    "build:server": "babel ./server --out-dir build/",
     "start:prod": "set NODE_ENV=production&&node ./build/server.js",
     "start:dev": "webpack-dev-server --config webpack.dev.config.js --inline",
-    "start": "set NODE_ENV=development&&node ./build/server.js"
+    "start": "set NODE_ENV=development&&node ./build/server.js",
+    "flow": "flow"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.1",
     "express": "^4.15.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.1",
     "extract-text-webpack-plugin": "^2.1.0",
+    "flow-bin": "^0.46.0",
     "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
