--- a/web_src/.babelrc
+++ b/web_src/.babelrc
@@ -1,4 +1,4 @@
 {
-  "plugins": ["syntax-dynamic-import"],
-  "presets": ["es2015", "flow"]
+  "plugins": ["syntax-dynamic-import", "react-hot-loader/babel"]
+  // "presets": ["es2015"]
 }
