--- a/web_src/.babelrc
+++ b/web_src/.babelrc
@@ -1,4 +1,5 @@
 {
-  "plugins": ["syntax-dynamic-import", "react-hot-loader/babel"]
-  // "presets": ["es2015"]
+  "plugins": ["syntax-dynamic-import", "react-hot-loader/babel"],
+  // "presets": [["es2015", { "modules": false }]]
+  // "presets": [["es2015"]]
 }
